--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     </div>
 
     <footer>
-        <p>Developed with ❤️ by <a href="https://github.com/" target="_blank">Sania</a> | © 2025 All Rights Reserved</p>
+        <p>Developed with ❤️ by <a href="https://github.com/Sania-52" target="_blank">Sania</a> | © 2025 All Rights Reserved</p>
     </footer>
 </body>
 </html>
+
